--- a/static/css/pivot-style.css
+++ b/static/css/pivot-style.css
@@ -43,3 +43,39 @@ th:first-child, td:first-child {
 .button-container a {
     margin-left: 10px;
 }
+.spinner-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.spinner {
+    border: 12px solid #f3f3f3; /* Light grey */
+    border-top: 12px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/* Optional: Styling for the search inputs */
+.search-input {
+    margin-bottom: 10px;
+}
+/* Optional: Limit the height of the keterangan lists and make them scrollable */
+.keterangan-list {
+    max-height: 300px;
+    overflow-y: auto;
+}
